--- a/OsmAnd/res/layout-land/track_details.xml
+++ b/OsmAnd/res/layout-land/track_details.xml
@@ -203,7 +203,7 @@
                     android:background="?attr/bg_color"
                     android:paddingTop="8dp">
 
-                    <net.osmand.plus.charts.ElevationChart
+                    <com.github.mikephil.charting.charts.ElevationChart
                         android:id="@+id/chart"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
