--- a/OsmAnd/res/layout/elevation_profile_widget.xml
+++ b/OsmAnd/res/layout/elevation_profile_widget.xml
@@ -69,7 +69,7 @@
             android:orientation="vertical"
             android:visibility="visible">
 
-            <net.osmand.plus.charts.ElevationChart
+            <com.github.mikephil.charting.charts.ElevationChart
                 android:id="@+id/line_chart"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/route_info_line_chart_height"
