--- a/OsmAnd/res/layout/route_info_statistic.xml
+++ b/OsmAnd/res/layout/route_info_statistic.xml
@@ -128,7 +128,7 @@
 
 		</LinearLayout>
 
-		<net.osmand.plus.charts.ElevationChart
+		<com.github.mikephil.charting.charts.ElevationChart
 			android:id="@+id/chart"
 			android:layout_width="match_parent"
 			android:layout_height="72dp"
