--- a/OsmAnd/res/layout/track_details.xml
+++ b/OsmAnd/res/layout/track_details.xml
@@ -134,7 +134,7 @@
                 android:background="?attr/bg_color"
                 android:paddingTop="8dp">
 
-                <net.osmand.plus.charts.ElevationChart
+                <com.github.mikephil.charting.charts.ElevationChart
                     android:id="@+id/chart"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
