--- a/OsmAnd/res/layout/card_coloring_style_details.xml
+++ b/OsmAnd/res/layout/card_coloring_style_details.xml
@@ -20,11 +20,6 @@
 		osmand:typeface="@string/font_roboto_regular"
 		tools:text="Specify color for map mode: day." />
 
-	<View
-		android:id="@+id/upper_space"
-		android:layout_width="match_parent"
-		android:layout_height="@dimen/content_padding" />
-
 	<LinearLayout
 		android:id="@+id/speed_altitude_legend"
 		android:layout_width="match_parent"
@@ -35,7 +30,7 @@
 
 		<View
 			android:layout_width="match_parent"
-			android:layout_height="@dimen/pages_item_size"
+			android:layout_height="@dimen/small_icon_size"
 			android:layout_marginBottom="@dimen/content_padding_half"
 			android:background="@drawable/bg_track_gradient" />
 
