--- a/OsmAnd/res/layout/card_multi_state.xml
+++ b/OsmAnd/res/layout/card_multi_state.xml
@@ -24,38 +24,39 @@
 			android:textColor="?android:textColorPrimary"
 			tools:text="@string/shared_string_color" />
 
-			<LinearLayout
-				android:id="@+id/card_selector"
+		<LinearLayout
+			android:id="@+id/card_selector"
+			android:layout_width="wrap_content"
+			android:layout_height="@dimen/bottom_sheet_list_item_height"
+			android:layout_gravity="center_vertical"
+			android:layout_marginEnd="@dimen/text_margin_small"
+			android:orientation="horizontal"
+			android:paddingHorizontal="@dimen/content_padding_small">
+
+			<net.osmand.plus.widgets.TextViewEx
+				android:id="@+id/title"
+				style="@style/TitleStyle"
 				android:layout_width="wrap_content"
-				android:layout_height="@dimen/bottom_sheet_list_item_height"
-				android:layout_marginEnd="@dimen/text_margin_small"
-				android:orientation="horizontal"
+				android:layout_height="wrap_content"
 				android:layout_gravity="center_vertical"
-				android:background="?android:selectableItemBackground"
-				android:paddingHorizontal="@dimen/content_padding_small">
+				android:ellipsize="end"
+				android:maxLines="1"
+				android:textColor="?android:textColorSecondary"
+				tools:text="Solid" />
 
-				<net.osmand.plus.widgets.TextViewEx
-					android:id="@+id/title"
-					style="@style/TitleStyle"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_gravity="center_vertical"
-					android:layout_weight="1"
-					android:ellipsize="end"
-					android:maxLines="1"
-					android:textColor="?android:textColorSecondary"
-					tools:text="Solid" />
+			<androidx.appcompat.widget.AppCompatImageButton
+				style="@style/Widget.AppCompat.ActionButton"
+				android:layout_width="@dimen/standard_icon_size"
+				android:layout_height="@dimen/standard_icon_size"
+				android:layout_gravity="center_vertical"
+				android:layout_marginStart="@dimen/dashFavIconMargin"
+				android:scaleType="center"
+				android:duplicateParentState="true"
+				android:clickable="false"
+				android:src="@drawable/ic_action_arrow_down"
+				android:tint="?attr/default_icon_color" />
 
-				<androidx.appcompat.widget.AppCompatImageView
-					android:layout_width="@dimen/standard_icon_size"
-					android:layout_height="@dimen/standard_icon_size"
-					android:layout_gravity="center_vertical"
-					android:layout_marginStart="@dimen/dashFavIconMargin"
-					android:scaleType="center"
-					android:src="@drawable/ic_action_arrow_down"
-					android:tint="?attr/default_icon_color" />
-
-			</LinearLayout>
+		</LinearLayout>
 
 	</LinearLayout>
 
