--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -5443,5 +5443,7 @@
 	<string name="poi_music_venue">Music venue</string>
 	<string name="poi_live_music_yes">Yes</string>
 
+	<string name="poi_shop_general">General shop</string>
+
 
 </resources>
