Add a new Colors Card on the "Route Line Appearance" screen

--- a/OsmAnd/res/layout/card_moded_colors_palette.xml
+++ b/OsmAnd/res/layout/card_moded_colors_palette.xml
@@ -7,7 +7,8 @@
 	<FrameLayout
 		android:id="@+id/theme_toggle_container"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content" >
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="@dimen/content_padding">
 
 		<include layout="@layout/custom_radio_buttons" />
 
